[tool.poetry]
name = "pysnmp-mibs"
version = "1.15.8-beta.1"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
pysnmp-pysmi = "^1.1.12"


[tool.poetry.dev-dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
