[tool.poetry]
name = "pysnmp-mibs"
version = "1.15.10"
description = ""
authors = ["rfaircloth-splunk <rfaircloth@splunk.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
pysnmp-pysmi = "^1.1.12"
pyyaml = { version = "!=6.0.0" }

[tool.poetry.dev-dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
